--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
         </h2>
       
         <form id="form" data-aos="fade-right">
-          <div class="form-group">
-            <label for="accNumber">Company ACC:</label>
-            <input type="text" id="accNumber" class="form-control" required>
-          </div>
+         <div class="form-group">
+            <label for="companyName">Company Name:</label>
+            <input type="text" id="companyName" class="form-control" required>
+        </div>
           <div class="form-group">
             <label for="startNumber">Extension:</label>
             <input type="number" id="startNumber" class="form-control" required>
