--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -185,26 +186,26 @@
             <!-- Clouds Dropdown -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="cloudsMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Clouds </a>
-              <div class="dropdown-menu" aria-labelledby="cloudsMenu">
-                <a class="dropdown-item" href="https://pbx.hojuzat.com/admin/config.php">Hojuzat</a>
-                <a class="dropdown-item" href="https://ucaas.go.com.sa/bevapbx/config.php?display=extensions&extdisplay=8166#">Ucass.1</a>
-                <a class="dropdown-item" href="https://ucaas2.go.com.sa/bevapbx/admin/config.php?display=configedit">Ucaas.2</a>
-                <a class="dropdown-item" href="http://go3.bevatel.com/bevapbx/admin/config.php">Ucaas.3</a>
-                <a class="dropdown-item" href="https://cloud.bevatel.com/admin/config.php?display=did">Cloud1</a>
-                <a class="dropdown-item" href="https://admin3.bavaya.com/config.php?type=setup&display=extensions&extdisplay=8006#">Cloud3</a>
-                <a class="dropdown-item" href="https://cloud4.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud4</a>
-                <a class="dropdown-item" href="https://cloud5.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud5</a>
-                <a class="dropdown-item" href="https://cloud6.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud6</a>
-                <a class="dropdown-item" href="https://cloud7.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud7</a>
-                <a class="dropdown-item" href="https://cloud8.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud8</a>
-                <a class="dropdown-item" href="https://cloud10.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud10</a>
-                <a class="dropdown-item" href="https://cloud11.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud11</a>
-                <a class="dropdown-item" href="https://cloud12.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud12</a>
-                <a class="dropdown-item" href="https://cloud13.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud13</a>
-                <a class="dropdown-item" href="https://cloud14.bevatel.com/admin/config.php?display=did">Cloud14</a>
-                <a class="dropdown-item" href="https://cloud15.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001">Cloud15</a>
-                <a class="dropdown-item" href="https://cloud16.bevatel.com/bevapbx/admin/config.php?display=extensions">Cloud16</a>
-                <a class="dropdown-item" href="https://cloud17.bevatel.com/bevapbx/admin/config.php" target="_blank">Cloud17</a>
+              <div class="dropdown-menu" aria-labelledby="cloudsMenu" target="_blank">
+                <a class="dropdown-item" href="https://pbx.hojuzat.com/admin/config.php"target="_blank">Hojuzat</a>
+                <a class="dropdown-item" href="https://ucaas.go.com.sa/bevapbx/config.php?display=extensions&extdisplay=8166#"target="_blank">Ucass.1</a>
+                <a class="dropdown-item" href="https://ucaas2.go.com.sa/bevapbx/admin/config.php?display=configedit"target="_blank">Ucaas.2</a>
+                <a class="dropdown-item" href="http://go3.bevatel.com/bevapbx/admin/config.php"target="_blank">Ucaas.3</a>
+                <a class="dropdown-item" href="https://cloud.bevatel.com/admin/config.php?display=did"target="_blank">Cloud1</a>
+                <a class="dropdown-item" href="https://admin3.bavaya.com/config.php?type=setup&display=extensions&extdisplay=8006#"target="_blank">Cloud3</a>
+                <a class="dropdown-item" href="https://cloud4.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud4</a>
+                <a class="dropdown-item" href="https://cloud5.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud5</a>
+                <a class="dropdown-item" href="https://cloud6.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud6</a>
+                <a class="dropdown-item" href="https://cloud7.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud7</a>
+                <a class="dropdown-item" href="https://cloud8.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud8</a>
+                <a class="dropdown-item" href="https://cloud10.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud10</a>
+                <a class="dropdown-item" href="https://cloud11.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud11</a>
+                <a class="dropdown-item" href="https://cloud12.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud12</a>
+                <a class="dropdown-item" href="https://cloud13.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud13</a>
+                <a class="dropdown-item" href="https://cloud14.bevatel.com/admin/config.php?display=did"target="_blank">Cloud14</a>
+                <a class="dropdown-item" href="https://cloud15.bevatel.com/admin/config.php?display=queues&view=form&extdisplay=3001"target="_blank">Cloud15</a>
+                <a class="dropdown-item" href="https://cloud16.bevatel.com/bevapbx/admin/config.php?display=extensions"target="_blank">Cloud16</a>
+                <a class="dropdown-item" href="https://cloud17.bevatel.com/bevapbx/admin/config.php" target="_blank"target="_blank">Cloud17</a>
               
               </div>
             </li>
@@ -278,11 +279,11 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="cloudsMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Tools </a>
               <div class="dropdown-menu" aria-labelledby="tools">
-                <a class="dropdown-item" href="https://cliq.zoho.com/company/805890729/index.do">Cliq</a>
-                <a class="dropdown-item" href="https://support.bevatel.com/agent/bevatel/bevatel-call-center/tickets/list/all-cases">Tickets</a>
-                <a class="dropdown-item" href="https://db.bevatel.com/">Dashboard</a>
-                <a class="dropdown-item" href="https://cloud.bevatel.com/cloudsoftphone/admin/">Cloudsoftphone</a>
-                <a class="dropdown-item" href="https://chat.bevatel.com/app/accounts/1/team/2">Chat</a>
+                <a class="dropdown-item" href="https://cliq.zoho.com/company/805890729/index.do"target="_blank">Cliq</a>
+                <a class="dropdown-item" href="https://support.bevatel.com/agent/bevatel/bevatel-call-center/tickets/list/all-cases"target="_blank">Tickets</a>
+                <a class="dropdown-item" href="https://db.bevatel.com/"target="_blank">Dashboard</a>
+                <a class="dropdown-item" href="https://cloud.bevatel.com/cloudsoftphone/admin/"target="_blank">Cloudsoftphone</a>
+                <a class="dropdown-item" href="https://chat.bevatel.com/app/accounts/1/team/2"target="_blank">Chat</a>
             </li>
           </ul>
         </div>
@@ -431,23 +432,96 @@
         }
 
         function generateLinks(cloudNumber) {
-          const cloudLinks = {
-            "1": {
-              fop: "https://cloud.bevatel.com/fop2/fop-login.php",
-              userAdmin: "https://cloud.bevatel.com/useradmin/13",
-              reports: "https://cloud.bevatel.com/stats/stats-login.php"
-            },
-            "3": {
-              fop: "https://admin3.bavaya.com/live-panel/fop-login.php",
-              userAdmin: "https://cloud3.bevatel.com/useradmin/",
-              reports: "https://cloud3.bevatel.com/advanced-reports/autologin.php"
-            },
-            "4": {
-              fop: "https://cloud4.bevatel.com/fop2/fop-login.php",
-              userAdmin: "https://cloud4.bevatel.com/useradmin/13",
-              reports: "https://cloud4.bevatel.com/stats/autologin.php"
-            }
-          };
+        
+
+
+
+
+const cloudLinks = {
+  "1": {
+    fop: "https://cloud.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud.bevatel.com/useradmin/13",
+    reports: "https://cloud.bevatel.com/stats/stats-login.php"
+  },
+  "2": {
+    fop: "https://go2.bevatel.com/fop2/autologin.php",
+    userAdmin: "https://go2.bevatel.com/useradmin/",
+    reports: "https://ucaas.go.com.sa/stats-ucaas2/autologin.php"
+  },
+  "3": {
+    fop: "https://admin3.bavaya.com/live-panel/fop-login.php",
+    userAdmin: "https://cloud3.bevatel.com/useradmin/",
+    reports: "https://cloud3.bevatel.com/advanced-reports/autologin.php"
+  },
+  "4": {
+    fop: "https://cloud4.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud4.bevatel.com/useradmin/13",
+    reports: "https://cloud4.bevatel.com/stats/autologin.php"
+  },
+  "5": {
+    fop: "https://cloud5.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud5.bevatel.com/useradmin/16",
+    reports: "https://cloud5.bevatel.com/stats-cloud15/autologin.php"
+  },
+  "6": {
+    fop: "https://cloud6.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud6.bevatel.com/useradmin/13",
+    reports: "https://cloud6.bevatel.com/stats/autologin.php"
+  },
+  "7": {
+    fop: "https://cloud7.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud7.bevatel.com/useradmin/16",
+    reports: "https://cloud7.bevatel.com/stats/stats-login.php"
+  },
+  "8": {
+    fop: "https://cloud8.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud8.bevatel.com/useradmin/13",
+    reports: "https://cloud8.bevatel.com/stats/stats-login.php"
+  },
+  "10": {
+    fop: "https://cloud10.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud10.bevatel.com/useradmin/13",
+    reports: "https://cloud10.bevatel.com/stats/stats-login.php"
+  },
+  "11": {
+    fop: "https://cloud11.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud11.bevatel.com/useradmin/16",
+    reports: "https://cloud4.bevatel.com/stats-cloud11/autologin.php"
+  },
+  "12": {
+    fop: "https://cloud11.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud11.bevatel.com/useradmin/16",
+    reports: "https://cloud4.bevatel.com/stats-cloud11/autologin.php"
+  },
+  "13": {
+    fop: "https://cloud11.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud11.bevatel.com/useradmin/16",
+    reports: "https://cloud4.bevatel.com/stats-cloud11/autologin.php"
+  },
+  "14": {
+    fop: "https://cloud14.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud14.bevatel.com/useradmin/16",
+    reports: "https://cloud5.bevatel.com/stats-cloud14/autologin.php"
+  },
+  "15": {
+    fop: "https://cloud15.bevatel.com/fop2/fop-login.php",
+    userAdmin: "https://cloud15.bevatel.com/useradmin/16",
+    reports: "https://cloud5.bevatel.com/stats-cloud15/autologin.php"
+  },
+  "16": {
+    fop: "https://cloud16.bevatel.com/fop2/autologin.php",
+    userAdmin: "https://cloud16.bevatel.com/useradmin",
+    reports: "https://cloud4.bevatel.com/stats-cloud16/autologin.php"
+  },
+  "17": {
+    fop: "https://cloud17.bevatel.com/fop2/autologin.php",
+    userAdmin: "https://cloud17.bevatel.com/useradmin/16",
+    reports: "https://cloud6.bevatel.com/stats-cloud17/autologin.php"
+  }
+};
+
+
+
           const links = cloudLinks[cloudNumber];
           if (links) {
             document.getElementById('fopLink').value = links.fop || '';
