--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       if (user) {
     sessionStorage.setItem("isLoggedIn", "true");
-    window.location.href = "d.html";
+    window.location.href = "main.html";
 }
  else {
         attempts++;
