--- a/main.html
+++ b/main.html
@@ -388,7 +388,7 @@ function checkLoginStatus() {
     // لو مفيش حالة تسجيل دخول أو حالة مش "true"
     if (!isLoggedIn || isLoggedIn !== "true") {
         alert('Access Denied. Please log in first.');
-        window.location.href = "login.html"; // هنوجه المستخدم لصفحة تسجيل الدخول
+        window.location.href = "index.html"; // هنوجه المستخدم لصفحة تسجيل الدخول
     }
 }
 
