--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <button type="submit" class="btn login-btn w-100" id="loginBtn">Login</button>
       </div>
       <div id="errorMsg" class="mt-3 text-center text-danger">
-        Invalid credentials, please try again.
+        Invalid info, please try again.
       </div>
       <div id="remainingAttempts" class="mt-3 text-center attempts">
         You have <span id="attemptsLeft">4</span> attempts remaining.
